# bec-orchestration

./: .gitignore  CLI_GUIDE.md  README.md  bec-worker.service  cloudwatch.json  pyproject.toml  requirements.txt  schema.sql  test_ocrv1.py  test_ocrv1_async.py
bec_orch/: __init__.py  config.py  errors.py  logging_setup.py
bec_orch/cli/: __init__.py  errors.py  jobs.py  main.py  queue.py  worker.py  workers.py
bec_orch/core/: models.py  registry.py  worker_runtime.py
bec_orch/io/: db.py  sqs.py
bec_orch/jobs/: base.py
bec_orch/jobs/ldv1/: cli.py  config.py  debug_parquet.py  ld_inference_runner.py  ld_postprocessor.py  parquet_writer.py  tile_batcher.py  types_common.py  utils.py  worker.py
bec_orch/jobs/ocrv1/: config.py  ctc_decoder.py  ctc_decoder_fast.py  ctc_decoder_k2.py  ctc_decoder_nemo.py  data_structures.py  debug_visualizer.py  line.py  line_decoder.py  line_processor.py  model.py  output_writer.py  parquet_writer.py  pipeline_async.py  stages.py  types_ocrv1.py  utils.py  worker.py  worker_async.py
bec_orch/jobs/shared/: decoder.py  memory_monitor.py  prefetch.py  types_common.py
bec_orch/orch/: enqueue.py  job_admin.py
lists/: todo_ldv1.csv  todo_ocr1-ws-ldv1.csv
