[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bec-orchestration"
version = "0.1.0"
description = "BEC Orchestration - Task orchestration for large-scale OCR processing"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

authors = [
    {name = "BDRC", email = "info@bdrc.io"}
]

# Core dependencies (minimal, required for orchestration)
dependencies = [
    # Database
    "psycopg[binary]>=3.1.0",
    
    # AWS services
    "boto3>=1.26.0",
    "botocore>=1.29.0",
    "ec2-metadata>=2.13.0",
    
    # CLI
    "click>=8.0.0",
    "rich>=13.0.0",
    "tabulate>=0.9.0",
    
    # Utilities
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
# Line detection v1 job worker (heavy ML dependencies)
ldv1 = [
    # Image processing
    "opencv-python-headless==4.11.0.86",
    "pyvips==3.1.1",
    "Pillow>=10.0.0",
    
    # ML model
    "segmentation-models-pytorch",
    "thin-plate-spline==1.2.1",
    
    # Data output
    "pyarrow>=14.0.0",
    
    # Note: torch/torchvision should be installed separately
    # based on your CUDA version or use the pre-installed
    # versions from AWS DLAMI
]

# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

# All optional dependencies
all = [
    "bec-orchestration[ldv1,dev]",
]

[project.scripts]
bec = "bec_orch.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["bec_orch*"]

[tool.black]
line-length = 120
target-version = ['py310']

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

